Update Datenbank, Charakterbogen, Ressourcen-Export

--- a/src/Sephrasto/Data/Charakterbögen/Standard Charakterbogen.ini
+++ b/src/Sephrasto/Data/Charakterbögen/Standard Charakterbogen.ini
@@ -1,27 +1,31 @@
-Info: "Der Standard Charakterbogen hat zwei A4-Seiten, bzw. drei für übernatürliche Charaktere.\n
-Features:\n
-- 8 profane Vorteile\n
+Info: "Der Charakterbogen hat drei A4-Seiten, bzw. vier für übernatürliche Charaktere.
+\nFeatures:\n
+- Hintergrund, Aussehen und Charakterbild\n
+- 24 profane Vorteile\n
 - 16 Kampfvorteile\n
-- 12 Freie Fertigkeiten\n
-- 23 profane Fertigkeiten\n
+- 28 Freie Fertigkeiten\n
+- 28 profane Fertigkeiten\n
 - 12 Übernatürliche Fertigkeiten\n
-- 30 übernatürliche Talente.\n
+- 30 übernatürliche Talente\n
 - Bei Bedarf erhältst du automatisch weitere Seiten für Übernatürliches."
 Seitengrösse: A4
 Seitenorientierung: Portrait
 Seitenbeschreibungen:
-- Eigenheiten, Attribute und Fertigkeiten
+- Hintergrund, Eigenheiten, Attribute
+- Vorteile, Fertigkeiten und Freie Fertigkeiten
 - Gesundheit, Rüstung, Waffen und Ausrüstung
 - Übernatürliche Fertigkeiten, Vorteile und Talente
-MaxVorteile: 8
+MaxVorteile: 24
+MaxVorteileProFeld: 2
 MaxKampfVorteile: 16
 MaxÜbernatürlicheVorteile: 12
-MaxFreieFertigkeiten: 12
-MaxFreieProFeld: 2
-MaxFertigkeiten: 23
+MaxFreieFertigkeiten: 28
+MaxFertigkeiten: 28
 MaxÜbernatürlicheFertigkeiten: 12
 MaxÜbernatürlicheTalente: 30
-ÜberSeite: 3
+ÜberSeite: 4
+Bild: 
+- [0.665, 302, 219]
 FormularMappings:
     Spezies: Rasse
     Status: Statu
@@ -56,3 +60,21 @@ FormularMappings:
     GuPBasis: KarmaenergieBasis
     GuP: Karmaenergie
     ModGuP: ModKarmaenergie
+    VorteilWillensstarkI: ModWillensstark1
+    VorteilWillensstarkII: ModWillensstark2
+    VorteilUnbeugsamkeit: ModUnbeugsam
+    VorteilFlinkI: ModFlink1
+    VorteilFlinkII: ModFlink2
+    VorteilGefaessderSterne: ModGefaess
+    VorteilKampfreflexe: ModKampfreflexe
+    VorteilUnverwuestlich: ModUnverwuestlich
+    Ressource1: Hintergrund1
+    Ressource2: Hintergrund2
+    Ressource3: Hintergrund3
+    Ressource4: Hintergrund4
+    Ressource5: Hintergrund5
+    Ressource6: Hintergrund6
+    Ressource7: Hintergrund7
+    Ressource8: Hintergrund8
+    Ressource9: Hintergrund9
+    Ressource10: Hintergrund10
