Most plugins: move db setting loading to "datenbank_laden" filter so they are loaded first. This way merged databases can override the default settings.

--- a/src/Sephrasto/Plugins/Tierbegleiter/manifest.json
+++ b/src/Sephrasto/Plugins/Tierbegleiter/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Tierbegleiter",
-  "description": "Dieses Plugin erlaubt das Erstellen von Tierbegleitern entsprechend des Drachentöter Bestiariums und das Exportieren in den enthaltenen Tierbegleiterbogen.",
+  "description": "Dieses Plugin erlaubt das Erstellen von Tierbegleitern entsprechend des Ilaris Bestiariums und das Exportieren in den enthaltenen Tierbegleiterbogen.",
   "author": "Gatsu",
   "version": "5"
 }
