Entirely remove Freie Fertigkeiten from code. For now sprachen/schriften/kulturen are missing in datenbank.xml

--- a/src/Sephrasto/Data/Charakterbögen/Standard Charakterbogen.ini
+++ b/src/Sephrasto/Data/Charakterbögen/Standard Charakterbogen.ini
@@ -3,7 +3,6 @@ Info: "Der Charakterbogen hat drei A4-Seiten, bzw. vier für übernatürliche Ch
 - Hintergrund, Aussehen und Charakterbild\n
 - 24 profane Vorteile\n
 - 16 Kampfvorteile\n
-- 28 Freie Fertigkeiten\n
 - 28 profane Fertigkeiten\n
 - 12 Übernatürliche Fertigkeiten\n
 - 30 übernatürliche Talente\n
@@ -12,14 +11,13 @@ Seitengrösse: A4
 Seitenorientierung: Portrait
 Seitenbeschreibungen:
 - Hintergrund, Eigenheiten, Attribute
-- Vorteile, Fertigkeiten und Freie Fertigkeiten
+- Vorteile und Fertigkeiten
 - Gesundheit, Rüstung, Waffen und Ausrüstung
 - Übernatürliche Fertigkeiten, Vorteile und Talente
 MaxVorteile: 24
 MaxVorteileProFeld: 2
 MaxKampfVorteile: 16
 MaxÜbernatürlicheVorteile: 12
-MaxFreieFertigkeiten: 28
 MaxFertigkeiten: 28
 MaxÜbernatürlicheFertigkeiten: 12
 MaxÜbernatürlicheTalente: 30
